[EagerAppCDS] change testcase and log impl for quikstart
Summary: 1. change the output of log in quickStart.cpp
2. add exports for testcase

Test Plan: ci jtreg cds quickstart

CR: